tests/urmoac/errors/net_issues/duplicate_edge_id/o2r_output.urmoac
1000;10000;500.00;20.00;-250.00;0.00;-250.00;-20.00
1001;10000;400.00;10.00;-150.00;0.00;-150.00;10.00
1002;10000;300.00;0.00;-50.00;0.00;-50.00;0.00
1003;10000;250.00;10.00;0.00;0.00;0.00;-10.00
1004;10000;200.00;20.00;50.00;0.00;50.00;20.00
1005;10000;100.00;0.00;150.00;0.00;150.00;0.00
1006;10000;0.00;10.00;250.00;0.00;250.00;10.00
